--- a/environment.yml
+++ b/environment.yml
@@ -1,157 +1,192 @@
-name: pku
+name: open-mmlab
 channels:
-  - plotly
-  - anaconda
   - conda-forge
+  - anaconda
+  - pytorch
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _tflow_select=2.1.0=gpu
+  - absl-py=0.7.1=py37_0
+  - astor=0.8.0=py37_0
   - astroid=2.3.3=py37_0
-  - attrs=19.3.0=py_0
+  - attrs=19.1.0=py37_1
   - backcall=0.1.0=py37_0
   - blas=1.0=mkl
   - bleach=3.1.0=py37_0
-  - bzip2=1.0.8=h516909a_2
+  - c-ares=1.15.0=h7b6447c_1001
   - ca-certificates=2019.11.27=0
-  - cairo=1.14.12=h8948797_3
   - certifi=2019.11.28=py37_0
-  - cycler=0.10.0=py37_0
-  - cython=0.29.14=py37he6710b0_0
-  - dbus=1.13.12=h746ee38_0
-  - decorator=4.4.1=py_0
+  - cffi=1.12.3=py37h2e261b9_0
+  - cloudpickle=1.2.1=py_0
+  - cudatoolkit=10.0.130=0
+  - cudnn=7.6.0=cuda10.0_0
+  - cupti=10.0.130=0
+  - cython=0.29.12=py37he6710b0_0
+  - cytoolz=0.10.0=py37h7b6447c_0
+  - dask-core=2.2.0=py_0
+  - dbus=1.13.6=h746ee38_0
+  - decorator=4.4.0=py37_1
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py37_0
   - expat=2.2.6=he6710b0_0
-  - ffmpeg=4.0=hcdf2ecd_0
   - fontconfig=2.13.0=h9420a91_0
-  - freeglut=3.0.0=hf484d3e_1005
   - freetype=2.9.1=h8a8886c_1
-  - glib=2.63.1=h5a9c865_0
+  - gast=0.2.2=py37_0
+  - glib=2.56.2=hd408876_0
   - gmp=6.1.2=h6c8ec71_1
-  - graphite2=1.3.13=hf484d3e_1000
+  - google-pasta=0.1.7=py_0
+  - grpcio=1.16.1=py37hf8bcb03_1
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
-  - harfbuzz=1.8.8=hffaf4a1_0
-  - hdf5=1.10.2=hc401514_3
+  - h5py=2.9.0=py37h7918eee_0
+  - hdf5=1.10.4=hb1b8bf9_0
   - icu=58.2=h9c2bf20_1
-  - importlib_metadata=1.3.0=py37_0
+  - ignite=0.2.1=py37_0
   - intel-openmp=2019.4=243
-  - ipykernel=5.1.3=py37h39e3cac_0
-  - ipython=7.10.2=py37h39e3cac_0
+  - ipykernel=5.1.2=py37h39e3cac_0
+  - ipython=7.7.0=py37h39e3cac_0
   - ipython_genutils=0.2.0=py37_0
   - ipywidgets=7.5.1=py_0
   - isort=4.3.21=py37_0
-  - jasper=2.0.14=h07fcdf6_1
   - jedi=0.15.1=py37_0
-  - jinja2=2.10.3=py_0
-  - jpeg=9b=h024ee3a_2
-  - jsonschema=3.2.0=py37_0
+  - jinja2=2.10.1=py37_0
+  - joblib=0.13.2=py37_0
+  - jpeg=9c=h14c3975_1001
+  - jsonschema=3.0.2=py37_0
   - jupyter=1.0.0=py37_7
-  - jupyter_client=5.3.4=py37_0
-  - jupyter_console=5.2.0=py37_1
-  - jupyter_core=4.6.1=py37_0
-  - kiwisolver=1.1.0=py37he6710b0_0
+  - jupyter_client=5.3.1=py_0
+  - jupyter_console=6.0.0=py37_0
+  - jupyter_core=4.5.0=py_0
+  - keras-applications=1.0.8=py_0
+  - keras-preprocessing=1.1.0=py_1
   - lazy-object-proxy=1.4.3=py37h7b6447c_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran=3.0.0=1
   - libgfortran-ng=7.3.0=hdf63c60_0
-  - libglu=9.0.0=hf484d3e_1000
-  - libopencv=3.4.2=hb342d67_1
-  - libopus=1.3=h7b6447c_0
+  - libjpeg-turbo=2.0.3=h516909a_1
   - libpng=1.6.37=hbc83047_0
+  - libprotobuf=3.8.0=hd408876_0
   - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_0
   - libuuid=1.0.3=h1bed415_2
-  - libvpx=1.7.0=h439df22_0
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=hea5a465_1
+  - markdown=3.1.1=py37_0
   - markupsafe=1.1.1=py37h7b6447c_0
-  - matplotlib=3.1.1=py37h5429711_0
   - mccabe=0.6.1=py37_1
   - mistune=0.8.4=py37h7b6447c_0
   - mkl=2019.4=243
-  - mkl-service=2.3.0=py37he904b0f_0
-  - mkl_fft=1.0.15=py37ha843d7b_0
-  - mkl_random=1.1.0=py37hd6b4f25_0
-  - more-itertools=8.0.2=py_0
-  - nbconvert=5.6.1=py37_0
+  - mkl-service=2.0.2=py37h7b6447c_0
+  - mkl_fft=1.0.12=py37ha843d7b_0
+  - mkl_random=1.0.2=py37hd81dba3_0
+  - nbconvert=5.5.0=py_0
   - nbformat=4.4.0=py37_0
   - ncurses=6.1=he6710b0_1
-  - notebook=6.0.2=py37_0
-  - numpy=1.17.4=py37hc1035e2_0
-  - numpy-base=1.17.4=py37hde5b4d6_0
+  - networkx=2.3=py_0
+  - ninja=1.9.0=py37hfd86e86_0
+  - notebook=6.0.0=py37_0
+  - numpy=1.16.4=py37h7e9f1db_0
+  - numpy-base=1.16.4=py37hde5b4d6_0
   - olefile=0.46=py37_0
-  - opencv=3.4.2=py37h6fd60c2_1
-  - openssl=1.0.2u=h7b6447c_0
-  - pandas=0.25.3=py37he6710b0_0
+  - onnx=1.6.0=py37he1b5a44_0
+  - openssl=1.1.1d=h7b6447c_3
+  - pandas=0.25.0=py37he6710b0_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
-  - parso=0.5.2=py_0
+  - parso=0.5.1=py_0
   - patsy=0.5.1=py37_0
   - pcre=8.43=he6710b0_0
   - pexpect=4.7.0=py37_0
   - pickleshare=0.7.5=py37_0
-  - pillow=6.2.1=py37h34e0f95_0
-  - pip=19.3.1=py37_0
-  - pixman=0.38.0=h516909a_1003
-  - plotly=4.4.1=py_0
+  - pillow=5.3.0=py37h00a061d_1000
+  - pip=19.1.1=py37_0
   - prometheus_client=0.7.1=py_0
-  - prompt_toolkit=3.0.2=py_0
+  - prompt_toolkit=2.0.9=py37_0
+  - protobuf=3.8.0=py37he6710b0_0
   - ptyprocess=0.6.0=py37_0
-  - py-opencv=3.4.2=py37hb342d67_1
-  - pygments=2.5.2=py_0
+  - pycparser=2.19=py37_0
+  - pygments=2.4.2=py_0
   - pylint=2.4.4=py37_0
-  - pyparsing=2.4.5=py_0
   - pyqt=5.9.2=py37h05f1152_2
-  - pyrsistent=0.15.6=py37h7b6447c_0
-  - python=3.7.0=h6e4f718_3
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
+  - pyrsistent=0.14.11=py37h7b6447c_0
+  - python=3.7.4=h265db76_1
+  - pytorch=1.2.0=py3.7_cuda10.0.130_cudnn7.6.2_0
+  - pytz=2019.2=py_0
+  - pywavelets=1.0.3=py37hdd07704_1
   - pyzmq=18.1.0=py37he6710b0_0
-  - qt=5.9.6=h8703b6f_2
-  - qtconsole=4.6.0=py_0
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=4.5.4=py_0
   - readline=7.0=h7b6447c_5
-  - retrying=1.3.3=py37_2
-  - scipy=1.3.2=py37h7c811a0_0
-  - seaborn=0.9.0=pyh91ea838_1
+  - rope=0.14.0=py_0
+  - scikit-image=0.15.0=py37he6710b0_0
+  - scipy=1.3.0=py37h7c811a0_0
+  - seaborn=0.9.0=py37_0
+  - segyio=1.8.8=py37hb3f55d8_0
   - send2trash=1.5.0=py37_0
-  - setuptools=42.0.2=py37_0
+  - setuptools=41.0.1=py37_0
   - sip=4.19.8=py37hf484d3e_0
-  - six=1.13.0=py37_0
-  - sqlite=3.30.1=h7b6447c_0
+  - six=1.12.0=py37_0
+  - sqlite=3.29.0=h7b6447c_0
   - statsmodels=0.10.1=py37hdd07704_0
-  - terminado=0.8.3=py37_0
-  - testpath=0.4.4=py_0
+  - tensorboard=1.14.0=py37hf484d3e_0
+  - tensorflow=1.14.0=gpu_py37h4491b45_0
+  - tensorflow-base=1.14.0=gpu_py37h8d69cac_0
+  - tensorflow-estimator=1.14.0=py_0
+  - tensorflow-gpu=1.14.0=h0d30ee6_0
+  - termcolor=1.1.0=py37_1
+  - terminado=0.8.2=py37_0
+  - testpath=0.4.2=py37_0
   - tk=8.6.8=hbc83047_0
+  - toolz=0.10.0=py_0
+  - torchvision=0.4.0=py37_cu100
   - tornado=6.0.3=py37h7b6447c_0
-  - tqdm=4.40.2=py_0
-  - traitlets=4.3.3=py37_0
-  - wcwidth=0.1.7=py37_0
+  - tqdm=4.32.1=py_0
+  - traitlets=4.3.2=py37_0
   - webencodings=0.5.1=py37_1
-  - wheel=0.33.6=py37_0
+  - werkzeug=0.15.5=py_0
+  - wheel=0.33.4=py37_0
   - widgetsnbextension=3.5.1=py37_0
   - wrapt=1.11.2=py37h7b6447c_0
-  - xorg-fixesproto=5.0=h14c3975_1002
-  - xorg-inputproto=2.3.2=h14c3975_1002
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libx11=1.6.9=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxfixes=5.0.3=h516909a_1004
-  - xorg-libxi=1.7.10=h516909a_0
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.4=h14c3975_4
   - zeromq=4.3.1=he6710b0_3
-  - zipp=0.6.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
-    - moderngl==5.5.4
-    - objloader==0.2.0
+    - addict==2.2.1
+    - albumentations==0.4.3
+    - apex==0.1
+    - atomicwrites==1.3.0
+    - chardet==3.0.4
+    - cycler==0.10.0
+    - future==0.18.2
+    - idna==2.8
+    - imagecorruptions==1.0.0
+    - imageio==1.5
+    - imgaug==0.2.6
+    - importlib-metadata==0.19
+    - kiwisolver==1.1.0
+    - matplotlib==3.1.1
+    - mmcv==0.2.15
+    - more-itertools==7.2.0
+    - opencv-python==4.1.2.30
+    - packaging==19.1
+    - pillow-simd==6.1.0.post0
+    - pluggy==0.12.0
+    - py==1.8.0
     - pycocotools==2.0
-prefix: /home/ivb/miniconda3/envs/pku
+    - pyparsing==2.4.2
+    - pytest==5.1.0
+    - pytest-runner==5.1
+    - python-dateutil==2.8.0
+    - pyyaml==5.1.2
+    - requests==2.22.0
+    - tensorboardx==1.8
+    - terminaltables==3.1.0
+    - urllib3==1.25.3
+    - wcwidth==0.1.7
+    - zipp==0.5.2
+prefix: /home/ivb/.conda/envs/open-mmlab
 
